# libroomba

./: .gitignore  Makefile  README.md  meson.build
examples/: discovery.c  getPassword.c  getRobotInfo.c  meson.build  startRoomba.c
include/: libroomba.h  meson.build
src/: commum.h  libroomba.c  libroomba.h  mqtt.c
