executable(
    'discovery',
    'discovery.c',
    include_directories : inc,
    dependencies: [
      lib_wolfssl,
      lib_wolfmqtt,
      lib_json
    ],
    link_with: [
      libroomba
    ]
)

executable(
    'getRobotInfo',
    'getRobotInfo.c',
    include_directories : inc,
    dependencies: [
      lib_wolfssl,
      lib_wolfmqtt,
      lib_json
    ],
    link_with: [
      libroomba
    ]
)

executable(
    'getPassword',
    'getPassword.c',
    include_directories : inc,
    dependencies: [
      lib_wolfssl,
      lib_wolfmqtt,
      lib_json
    ],
    link_with: [
      libroomba
    ]
)

executable(
    'startRoomba',
    'startRoomba.c',
    include_directories : inc,
    dependencies: [
      lib_wolfssl,
      lib_wolfmqtt,
      lib_json
    ],
    link_with: [
      libroomba
    ]
)
